# CoT-Editing-Exploration

./: .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml  setup.sh
cot_editing/: data.py  evaluate.py  rewards.py  train.py  utils.py
tasks/: lessons.md  todo.md
tests/: test_sandbox.py
