[project]
name = "cot-editing-exploration"
version = "0.1.0"
description = "Studying whether CoT editing methods can influence RL exploration in LLMs"
requires-python = ">=3.12,<3.14"
dependencies = [
    "torch>=2.6.0",
    "transformers>=4.53.0",
    "trl>=0.18.0",
    "unsloth>=2026.2",
    "peft>=0.17.0",
    "datasets>=3.0.0",
    "wandb>=0.22.0",
    "pydantic>=2.0.0",
    "bitsandbytes>=0.48.0",
    "accelerate>=1.0.0",
    "vllm>=0.10.0",
    "fire>=0.7.1",
    "tqdm",
]

[tool.hatch.build.targets.wheel]
packages = ["cot_editing"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
